Bug 169941 - FILESAVE: ODP -> PPTX internal links to shapes
Summary: FILESAVE: ODP -> PPTX internal links to shapes
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
26.8.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Karthik
URL:
Whiteboard: target:26.8.0 target:26.2.0.2 target:...
Keywords:
Depends on:
Blocks:
 
Reported: 2025-12-11 12:55 UTC by Karthik
Modified: 2026-01-12 08:45 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
ODP File (13.63 KB, application/vnd.oasis.opendocument.presentation)
2025-12-11 12:56 UTC, Karthik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Karthik 2025-12-11 12:55:27 UTC
Description:
Open the attached ODP file and save it as PPTX, the resulting file can't be opened in PowerPoint.

In LibreOffice we can add hyperlinks to shapes within the document. PowerPoint doesn't support this feature, we can only add hyperlinks to slides in PowerPoint. 

Because of this any hyperlinks to shapes are not handled in the PPTX export.

Steps to Reproduce:
1. Open the attached ODP file
2. Save it as PPTX
3. Open the resulting file in PowerPoint

Actual Results:
PowerPoint fails to open the file

Expected Results:
PowerPoint opens the file without any problem


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 25.2.3.2 (X86_64) / LibreOffice Community
Build ID: 520(Build:2)
CPU threads: 22; OS: Linux 6.12; UI render: default; VCL: gtk3
Locale: en-IN (en_IN); UI: en-US
Debian package version: 4:25.2.3-2+deb13u2
Calc: threaded
Comment 1 Karthik 2025-12-11 12:56:27 UTC
Created attachment 204580 [details]
ODP File
Comment 2 V Stuart Foote 2025-12-12 11:53:56 UTC Comment hidden (obsolete)
Comment 3 Commit Notification 2026-01-06 18:02:31 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4ad00d0a6a15a56b8d72ac05f636a266067aea59

tdf#169941: ODP->PPTX exporting shape hyperlinks

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2026-01-08 21:22:11 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/b93d0eca0f7bdb5aabbc2abf4fada51342f5ba42

tdf#169941: ODP->PPTX exporting shape hyperlinks

It will be available in 26.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2026-01-09 10:07:23 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7ea26e0213c7ae83b49d00309e91b4fc26c511f9

tdf#169941: sd_export_tests-ooxml4: Add test

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2026-01-12 08:45:13 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/0c32b2d5a23acbf2a1ece3b38bc8db6fd8b16cf1

tdf#169941: ODP->PPTX exporting shape hyperlinks

It will be available in 25.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.