tdf#169941: ODP->PPTX exporting shape hyperlinks

LO supports hyperlinks to shapes within the document. PowerPoint doesn't
have this feature. Export of these shape hyperlinks is not handled.

Now hyperlinks to shapes are converted to slides in which thy are
present.

Change-Id: I53f971c35a4f0f58532048b4041b0f35814b2715
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195465
Reviewed-by: Michael Stahl <michael.stahl@collabora.com>
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>