oox/source/export/drawingml.cxx
@@ -2482,6 +2482,25 @@ static OUString lcl_GetTarget(const css::uno::Reference<css::frame::XModel>& xMo
             sTarget = "slide" + OUString::number(i + 1) + ".xml";
             break;
         }
+        else // If URL is linked to a shape, assign it's slide as target
+        {
+            Reference<XShapes> xShapes = xDrawPage;
+            sal_uInt32 nShapes = xShapes->getCount();
+            for (sal_uInt32 j = 0; j < nShapes; j++)
+            {
+                Reference<XShape> xShape;
+                xShapes->getByIndex(j) >>= xShape;
+                Reference<container::XNamed> xName(xShape, UNO_QUERY);
+                if (!xName)
+                    continue;
+                OUString sShapeName = "#" + xName->getName();
+                if (rURL == sShapeName)
+                {
+                    sTarget = "slide" + OUString::number(i + 1) + ".xml";
+                    break;
+                }
+            }
+        }
     }
     if (sTarget.isEmpty())
     {
@@ -2894,17 +2913,21 @@ void DrawingML::WriteRunProperties(const Reference<XPropertySet>& rRun, sal_Int3
                 bool bExtURL = URLTransformer().isExternalURL(sURL);
                 sURL = bExtURL ? sURL : lcl_GetTarget(GetFB()->getModel(), sURL);
 
-                OUString sRelId
-                    = mpFB->addRelation(mpFS->getOutputStream(),
-                                        bExtURL ? oox::getRelationship(Relationship::HYPERLINK)
-                                                : oox::getRelationship(Relationship::SLIDE),
-                                        sURL, bExtURL);
-
+                OUString sRelId;
+                if (!sURL.isEmpty())
+                {
+                    sRelId
+                        = mpFB->addRelation(mpFS->getOutputStream(),
+                                            bExtURL ? oox::getRelationship(Relationship::HYPERLINK)
+                                                    : oox::getRelationship(Relationship::SLIDE),
+                                            sURL, bExtURL);
+                }
                 if (bExtURL)
                     mpFS->singleElementNS(XML_a, XML_hlinkClick, FSNS(XML_r, XML_id), sRelId);
                 else
-                    mpFS->singleElementNS(XML_a, XML_hlinkClick, FSNS(XML_r, XML_id), sRelId,
-                                          XML_action, "ppaction://hlinksldjump");
+                    mpFS->singleElementNS(
+                        XML_a, XML_hlinkClick, FSNS(XML_r, XML_id), sRelId, XML_action,
+                        sURL.isEmpty() ? "ppaction://noaction" : "ppaction://hlinksldjump");
             }
             else
             {
